; ModuleID = '/home/carl/AnghaBench/tig/src/extr_graph-v2.c_graph_collapse.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_graph-v2.c_graph_collapse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.graph_v2 = type { %struct.TYPE_6__, %struct.TYPE_5__, %struct.TYPE_4__ }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.graph_v2*)* @graph_collapse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @graph_collapse(%struct.graph_v2* %0) #0 {
  %2 = alloca %struct.graph_v2*, align 8
  store %struct.graph_v2* %0, %struct.graph_v2** %2, align 8
  br label %3

3:                                                ; preds = %7, %1
  %4 = load %struct.graph_v2*, %struct.graph_v2** %2, align 8
  %5 = call i64 @graph_needs_collapsing(%struct.graph_v2* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %23

7:                                                ; preds = %3
  %8 = load %struct.graph_v2*, %struct.graph_v2** %2, align 8
  %9 = getelementptr inbounds %struct.graph_v2, %struct.graph_v2* %8, i32 0, i32 2
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = add nsw i32 %11, -1
  store i32 %12, i32* %10, align 4
  %13 = load %struct.graph_v2*, %struct.graph_v2** %2, align 8
  %14 = getelementptr inbounds %struct.graph_v2, %struct.graph_v2* %13, i32 0, i32 1
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = add nsw i32 %16, -1
  store i32 %17, i32* %15, align 4
  %18 = load %struct.graph_v2*, %struct.graph_v2** %2, align 8
  %19 = getelementptr inbounds %struct.graph_v2, %struct.graph_v2* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = add nsw i32 %21, -1
  store i32 %22, i32* %20, align 4
  br label %3

23:                                               ; preds = %3
  ret i32 1
}

declare dso_local i64 @graph_needs_collapsing(%struct.graph_v2*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
